Sprint Paper Upload

--- a/_data/people.yml
+++ b/_data/people.yml
@@ -14,6 +14,11 @@ jonsaadfalcon:
   url: https://jonsaadfalcon.com/
   title: PhD Student
 
+shayantalaei:
+  name: Shayan Talaei
+  url: https://www.linkedin.com/in/shayan-talaei-6b65a0229/
+  title: PhD Student
+
 # Visiting
 
 bradleybrown:
