RoboMonkey Paper Upload

--- a/_data/people.yml
+++ b/_data/people.yml
@@ -19,6 +19,11 @@ shayantalaei:
   url: https://www.linkedin.com/in/shayan-talaei-6b65a0229/
   title: PhD Student
 
+jackykwok:
+  name: Jacky Kwok
+  url: https://www.linkedin.com/in/jackykwok02/
+  title: PhD Student
+
 # Visiting
 
 bradleybrown:
@@ -100,6 +105,17 @@ percyliang:
   title: Professor
   not_current: True
 
+marcopavone:
+  name: Marco Pavone
+  url: https://research.nvidia.com/person/marco-pavone
+  title: Professor
+  not_current: True
+
+ionstoica:
+  name: Ion Stoica
+  url: https://people.eecs.berkeley.edu/~istoica/
+  title: Professor
+  not_current: True
 # Alumni
 
 #example:
