Add KernelBench v0.1 blogpost

--- a/_data/people.yml
+++ b/_data/people.yml
@@ -82,6 +82,16 @@ adriangamarralafuente:
   url: https://www.linkedin.com/in/adrian-gamarra/
   title: Undergraduate Student
 
+nataliakokoromyti:
+  name: Natalia Kokoromyti
+  url: https://www.linkedin.com/in/natalia-kokoromyti-650893257/
+  title: Undergraduate Student
+
+soksereyrun:
+  name: Sokserey Run
+  url: https://www.linkedin.com/in/sokserey-sun-a6a442219/
+  title: Undergraduate Student
+
 je-yong:
   name: Je-Yong Lee
   url: https://www.linkedin.com/in/jeyong-lee-523ba2258/?originalSubdomain=uk
