--- a/_data/people.yml
+++ b/_data/people.yml
@@ -87,8 +87,8 @@ nataliakokoromyti:
   url: https://www.linkedin.com/in/natalia-kokoromyti-650893257/
   title: Undergraduate Student
 
-soksereyrun:
-  name: Sokserey Run
+soksereysun:
+  name: Sokserey Sun
   url: https://www.linkedin.com/in/sokserey-sun-a6a442219/
   title: Undergraduate Student
 
