add courses etc

--- a/_data/people.yml
+++ b/_data/people.yml
@@ -107,7 +107,7 @@ caiacostello:
   url: https://www.linkedin.com/in/caia-costello-5b4064216
   title: Master's Researcher
   alumni: true
-  next: Lambda
+  next: Lambda Labs
 
 adriangamarralafuente:
   name: Adrian Gamarra Lafuente
