first commit. Codebase cleaned.

--- a/_config.yml
+++ b/_config.yml
@@ -18,18 +18,18 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Scaling Intelligence Lab at Stanford University
-email: azalia@stanford.edu
+title: Michigan Social Computing Lab
+email: farnaz@umich.edu
 description: >- # this means to ignore newlines until "baseurl:"
 
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://scalingintelligence.stanford.edu" # the base hostname & protocol for your site, e.g. http://example.com
-logo: /imgs/logo.png
+url: "https://socialcomputing.michigan.edu" # the base hostname & protocol for your site, e.g. http://example.com
+logo: /imgs/MICHIGAN.png
 twitter:
-  username: scaling_intelligence_lab
+  username: umich_hci
   card: summary
-twitter_username: scaling_intelligence_lab
-github_username: scaling_intelligence_lab
+twitter_username: umich_hci
+github_username: UMichHCI
 
 collections:
   pubs:
