--- a/_data/tags.yml
+++ b/_data/tags.yml
@@ -7,8 +7,11 @@
   - benchmark
   - empirical study
 - # domain
-  - natural language processing
-  - machine learning
+  - human-computer interaction
   - generative ai
   - ml systems
+  - social computing
+  - content moderation
+  - personalization
+  - natural language processing
   
