--- a/_data/people.yml
+++ b/_data/people.yml
@@ -1,58 +1,39 @@
-azaliamirhoseini:
-  name: Azalia Mirhoseini
-  url: http://azaliamirhoseini.com/
+farnazjahanbakhsh:
+  name: Farnaz Jahanbakhsh
+  url: https://people.csail.mit.edu/farnazj/
   title: Assistant Professor
 
+# Temporary - Stanford people referenced in publications (to be removed)
+
+
 # PhDs
-jordanjuravsky:
-  name: Jordan Juravsky
-  url: https://www.jordanjuravsky.com/
+rayhanrashed:
+  name: Rayhan Rashed
+  url: https://rayhan.io/
   title: PhD Student
-  note: On Leave at Meta Superintelligence Lab
+  # note: On Leave at Meta Superintelligence Lab
+  # on_leave: true
+
+larnellmoore:
+  name: Larnell Moore
+  url: https://larnell.dev/
+  title: PhD Student
+  note: Coadvised with Rada Mihalcea
+
+
+rashonpoole:
+  name: Rashon Poole
+  url: https://linkedin.com/in/rashonpoole/
+  title: PhD Student
+  # note: Coadvised with Amin Saberi
+
+sinaelahimanesh:
+  name: Sina Elahimanesh
+  url: https://sinaelahimanesh.com/
+  title: PhD Student
+  note: On Leave at XYZ Corp.
   on_leave: true
 
-jonsaadfalcon:
-  name: Jon Saad-Falcon
-  url: https://jonsaadfalcon.com/
-  title: PhD Student
-  note: Coadvised with Christopher Ré
-
-
-shayantalaei:
-  name: Shayan Talaei
-  url: https://www.linkedin.com/in/shayan-talaei-6b65a0229/
-  title: PhD Student
-  note: Coadvised with Amin Saberi
-
-anneouyang:
-  name: Anne Ouyang
-  url: https://anneouyang.com/
-  title: PhD Student
-  note: On Leave at Standard Kernel Co.
-  on_leave: true
-
-simonguo:
-  name: Simon Guo
-  url: https://simonguo.tech/
-  title: PhD Student
-
-jackykwok:
-  name: Jacky Kwok
-  url: https://www.linkedin.com/in/jackykwok02/
-  title: PhD Student
-  note: Coadvised with Marco Pavone
-
-hermannkumbong:
-  name: Hermann Kumbong
-  url: https://www.linkedin.com/in/hermannkumbong/
-  title: PhD Student
-  note: Coadvised with Christopher Ré
-
-
-bradleybrown:
-  name: Bradley Brown
-  url: https://www.bradbrown.ca/
-  title: PhD Student
 
 
 # Let's put a collaborator section in future PRs
@@ -63,106 +44,40 @@ bradleybrown:
 
 # Researchers
 
-ryanehrlich:
-  name: Ryan Ehrlich
-  url: https://www.linkedin.com/in/ryan-ehrlich-68a60b11a/
-  title: Researcher
-  alumni: true
-  next: Meta Superintelligence Lab
+# ryanehrlich:
+#   name: Ryan Ehrlich
+#   url: https://www.linkedin.com/in/ryan-ehrlich-68a60b11a/
+#   title: Researcher
+#   alumni: true
+#   next: Meta Superintelligence Lab
 
 # Masters
 
-williamhu:
-  name: William Hu
-  url: https://www.linkedin.com/in/williamh20/
-  title: Master's Researcher
-
-shloknatarajan:
-  name: Shlok Natarajan
-  url: https://www.linkedin.com/in/shloknatarajan/
-  title: Master's Researcher
-
-brendanmclaughlin:
-  name: Brendan McLaughlin
-  url: https://www.brendanmclaughlin.me/
-  title: Master's Researcher
-  alumni: true
-  next: Reflection AI
+# brendanmclaughlin:
+#   name: Brendan McLaughlin
+#   url: https://www.brendanmclaughlin.me/
+#   title: Master's Researcher
+#   alumni: true
+#   next: Reflection AI
 
 # Undergrads
 
-hangookang:
-  name: Hangoo Kang
-  url: https://hgkang02.github.io/
-  title: Master's Researcher
-
-
-tanvirbhathal:
-  name: Tanvir Bhathal
-  url: https://www.linkedin.com/in/tanvir-bhathal/
+bhaveshvuyyuru:
+  name: Bhavesh Vuyyuru
+  url: https://linkedin.com/in/bhavesh-vuyyuru/
   title: Undergraduate Student
 
-caiacostello:
-  name: Caia Costello
-  url: https://www.linkedin.com/in/caia-costello-5b4064216
-  title: Master's Researcher
-  alumni: true
-  next: Lambda Labs
-
-adriangamarralafuente:
-  name: Adrian Gamarra Lafuente
-  url: https://www.linkedin.com/in/adrian-gamarra/
+gabrielkoo:
+  name: Gabriel Koo
+  url: https://linkedin.com/in/gabrielkoo/
   title: Undergraduate Student
 
-nataliakokoromyti:
-  name: Natalia Kokoromyti
-  url: https://www.linkedin.com/in/natalia-kokoromyti-650893257/
-  title: Undergraduate Student
-
-soksereysun:
-  name: Sokserey Sun
-  url: https://www.linkedin.com/in/sokserey-sun-a6a442219/
-  title: Undergraduate Student
-
-kesavanramakrishnan:
-  name: Kesavan Ramakrishnan
-  url: https://www.linkedin.com/in/kesavan-ramakrishnan/
-  title: Undergraduate Student
-
-
-agambhatia:
-  name: Agam Bhatia
-  url: http://agu18dec.github.io/
-  title: Undergraduate Student
-
-herumbshandilya:
-  name: Herumb Shandilya
-  url: https://www.herumbshandilya.com/
-  title: Master's Student
-
-orhunakengin:
-  name: Orhun Akengin
-  url: https://www.linkedin.com/in/akenginorhun/
-  title: Undergraduate Student
-
-rebeccajoseph:
-  name: Rebecca Joseph
-  url: https://www.linkedin.com/in/rebecca-jjoseph/
-  title: Undergraduate Student
-
-je-yong:
-  name: Je-Yong Lee
-  url: https://www.linkedin.com/in/jeyong-lee-523ba2258/?originalSubdomain=uk
-  title: Undergraduate Collaborator
-  affiliation: University of Oxford
-  not_current: True
-
-lukelee:
-  name: Donghyun Lee
-  url: https://www.linkedin.com/in/donghyun-lee-aa789422a/
-  title: Undergraduate Collaborator
-  affiliation: University College London
-  not_current: True
+# lukelee:
+#   name: Donghyun Lee
+#   url: https://www.linkedin.com/in/donghyun-lee-aa789422a/
+#   title: Undergraduate Collaborator
+#   affiliation: University College London
+#   not_current: True
 
 # Collaborating professors
 
@@ -172,23 +87,7 @@ percyliang:
   title: Professor
   not_current: True
 
-marcopavone:
-  name: Marco Pavone
-  url: https://research.nvidia.com/person/marco-pavone
-  title: Professor
-  not_current: True
 
-ionstoica:
-  name: Ion Stoica
-  url: https://people.eecs.berkeley.edu/~istoica/
-  title: Professor
-  not_current: True
-
-aakankshash:
-    name: Aakanksha Chowdhery
-    url: https://www.achowdhery.com/
-    title: Adjunct Professor
-    not_current: True
 
 # Alumni
 
