--- a/_data/research_themes.yml
+++ b/_data/research_themes.yml
@@ -18,30 +18,23 @@
 #     We create AI systems that enable people to design and test new hardware architectures.
 
 
-- key: scalable_intelligence
-  name: Scalable Intelligence
-  url: /pubs/
+- key: personalization_agency
+  name: Personalization and User Agency
+  url: /pubs/#tag=personalization
   people:
   desc: >
-    We build new AI systems that scale robustly across data, parameters, and compute.
+    Developing systems that give users control over their digital experiences through personalized content curation and algorithmic transparency.
 
-- key: aosi
-  name: Agentic Optimization and Self-Improvement
-  url: /pubs/
+- key: human_values
+  name: Human Values in Computing
+  url: /pubs/#tag=HCI
   people:
   desc: >
-    We create agentic frameworks that enable machines to learn from their worldly interactions and experiences, enabling advanced reasoning and planning.
+    Investigating how computational systems can align with diverse human values and support pluralistic perspectives in social platforms.
 
-- key: avb
-  name: Automated Verifiers and Benchmarks
-  url: /pubs/
+- key: llms_social_computing
+  name: LLMs for Social Computing
+  url: /pubs/#tag=social_computing
   people:
   desc: >
-    We design methods and frameworks for automated evaluation and benchmarking.
-
-- key: assa
-  name: AI for Systems and Systems for AI
-  url: /pubs/
-  people:
-  desc: >
-    We design efficient systems for AI training and serving, with a particular interest in using AI itself as the optimization engine.
+    Leveraging large language models to understand, transform, and enhance social interactions and content at scale.
